WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315132
[JSC] incorrect side-effect modeling for Spread(SetObjectUse) in DFG abstract interpreter
https://bugs.webkit.org/show_bug.cgi?id=315132
Summary
[JSC] incorrect side-effect modeling for Spread(SetObjectUse) in DFG abstract...
Kai Tamkun
Reported
2026-05-19 15:55:49 PDT
rdar://177136593
Attachments
Add attachment
proposed patch, testcase, etc.
Kai Tamkun
Comment 1
2026-05-19 16:22:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65234
EWS
Comment 2
2026-05-20 17:34:12 PDT
Committed
313614@main
(fb8bfead603e): <
https://commits.webkit.org/313614@main
> Reviewed commits have been landed. Closing PR #65234 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug